tests/ui/typech/trait_signature_mismatch_ret.stderr
× error[LM4169]: implemented method does not match definition signature
   ╭─[trait_signature_mismatch_ret.lm:6:5]
 5 │ use Default<Int64> in Int32 {
 6 │     pub fn default() -> Int32 {
   │     ^ expected signature fn default() -> Int64, found fn default() -> Int32
 7 │         return 0_i32;
 8 │     }
 9 │ }
   ╰──